--- a/academic-paper/vorlage.tex
+++ b/academic-paper/vorlage.tex
@@ -6,7 +6,7 @@
 % Titel Informationen
 \title{Titel des Dokuments}
 \author{Author}
-%\date{Datum} % Auskommentiert um aktuelles Datum zu erhalten
+\date{\today}
 
 % Das Dokument beginnt hier
 \begin{document}
