--- a/academic-paper/vorlage.tex
+++ b/academic-paper/vorlage.tex
@@ -17,8 +17,13 @@
 \tableofcontents
 \pagebreak
 
+% Abstract fasst die Arbeit zusammen
+\begin{abstract}
+Abstract
+\end{abstract}
+
 % Ab hier soll der Inhalt des Dokumentes sein
-\section{Abstract}
+\section{Überschrift}
 Hier ist das Abstract mit einem Zitat\cite[p.~150]{quellenName}.
 
 % Quellenangabe auf eigener Seite
