--- a/academic-paper/vorlage.tex
+++ b/academic-paper/vorlage.tex
@@ -28,7 +28,7 @@ Hier ist das Abstract mit einem Zitat\cite[p.~150]{quellenName}.
 
 % Quellenangabe auf eigener Seite
 \pagebreak
-\bibliographystyle{apa}
+\bibliographystyle{apalike}
 \bibliography{quellen}
     
 \end{document}
